# lector

./: .gitignore  LICENSE  README.md  STATUS.md  crypto.py  launch-silent.vbs  launch.bat  launch.sh  library_store.py  license_manager.py  requirements.txt  server.py  text_parser.py
archive/: sidecar.spec  sidecar_mac.spec
comms/: Lector_Decision_Record_March2026.docx
docs/: 2026-05-11-reader-design.md  2026-05-13-nsis-rebuild-prestage.md  index.html
pkuseg_stub/: setup.py
pkuseg_stub/pkuseg/: __init__.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
static/: index.html  style.css
video/: package-lock.json  package.json
video/src/: LectorDemo.tsx  Root.tsx  tokens.ts
video/src/scenes/: EndCard.tsx  Intro.tsx  PlaybackScene.tsx  WritingScene.tsx
video/src/shorts/: LectorShort01.tsx  ShortShell.tsx
